--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.9",
+    "serve-static": "^1.14.1",
     "unirest": "^0.6.0"
   }
 }
