--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "eslint-utils": ">=1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
@@ -21,6 +22,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "eslint-utils": ">=1.4.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
